Rewrote part of the results.and attributes.

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,5 @@
-% Encoding: x-MacRoman
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
 
 
 @Article{Abdi2013,
@@ -101,11 +102,12 @@
 }
 
 @TechReport{Alavi1991,
-  author      = {Alavi, M.},
-  title       = {Tectonic map of the {M}iddle {E}ast, scale 1:5,000,000},
-  institution = {Geological Survey of Iran},
-  year        = {1991},
-  journal     = {Geological Survey of Iran},
+  Title                    = {Tectonic map of the {M}iddle {E}ast, scale 1:5,000,000},
+  Author                   = {Alavi, M.},
+  Institution              = {Geological Survey of Iran},
+  Year                     = {1991},
+
+  Journal                  = {Geological Survey of Iran}
 }
 
 @Book{Ambraseys_2009_Book,
@@ -136,10 +138,10 @@
 }
 
 @Book{Baker2008,
-  author = {Baker, Jack W},
-  title  = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
-  year   = {2008},
-  note   = {Version 1.3, 72pp},
+  Title                    = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
+  Author                   = {Baker, Jack W},
+  Year                     = {2008},
+  Note                     = {Version 1.3, 72pp}
 }
 
 @Article{Barani2007,
@@ -588,6 +590,22 @@
   Doi                      = {10.1785/0119990017}
 }
 
+@Article{Kagan1994,
+  Title                    = {Long-term probabilistic forecasting of earthquakes},
+  Author                   = {Y. Y. Kagan and D. D. Jackson},
+  Journal                  = {J. Geophys. Res.},
+  Year                     = {1994},
+
+  Month                    = {jul},
+  Number                   = {B7},
+  Pages                    = {13685--13700},
+  Volume                   = {99},
+
+  Doi                      = {10.1029/94jb00500},
+  Publisher                = {Wiley-Blackwell},
+  Url                      = {http://dx.doi.org/10.1029/94JB00500}
+}
+
 @Article{Kalkan2009,
   Title                    = {Reassessment of probabilistic seismic hazard in the {M}armara region},
   Author                   = {Kalkan, Erol and G{\"u}lkan, Polat and Yilmaz, Nazan and {\c{C}}elebi, Mehmet},
@@ -832,6 +850,21 @@
   Organization             = {Earthquake Engineering Research Institute}
 }
 
+@Article{Moschetti2015,
+  Title                    = {A Long-Term Earthquake Rate Model for the Central and Eastern {United States} from Smoothed Seismicity},
+  Author                   = {Morgan P. Moschetti},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2015},
+
+  Month                    = {nov},
+  Number                   = {6},
+  Pages                    = {2928--2941},
+  Volume                   = {105},
+  Doi                      = {10.1785/0120140370},
+  Publisher                = {Seismological Society of America ({SSA})},
+  Url                      = {http://dx.doi.org/10.1785/0120140370}
+}
+
 @Misc{timmurphy.org,
   Title                    = {Line Spacing in {LaTeX} documents},
 
@@ -872,6 +905,21 @@
   Month                    = mar,
   Url                      = {http://www.tiziocaio.org/ref/},
   Year                     = {2010}
+}
+
+@Article{Petersen2015,
+  Title                    = {The 2014 {United States} National Seismic Hazard Model},
+  Author                   = {Mark D. Petersen and Morgan P. Moschetti and Peter M. Powers and Charles S. Mueller and Kathleen M. Haller and Arthur D. Frankel and Yuehua Zeng and Sanaz Rezaeian and Stephen C. Harmsen and Oliver S. Boyd and Ned Field and Rui Chen and Kenneth S. Rukstales and Nico Luco and Russell L. Wheeler and Robert A. Williams and Anna H. Olsen},
+  Journal                  = {Earthquake Spectra},
+  Year                     = {2015},
+
+  Month                    = {nov},
+  Number                   = {S1},
+  Pages                    = {S1--S30},
+  Volume                   = {31},
+  Doi                      = {10.1193/120814eqs210m},
+  Publisher                = {Earthquake Engineering Research Institute},
+  Url                      = {http://dx.doi.org/10.1193/120814EQS210M}
 }
 
 @Article{Rahgozar2012,
@@ -964,6 +1012,26 @@
   Timestamp                = {2016.01.15}
 }
 
+@Article{Soghrat2011,
+  Title                    = {Simulation of strong ground motion in northern {Iran} using the specific barrier model},
+  Author                   = {Soghrat, M. R. and Khaji, N. and Zafarani, H.},
+  Journal                  = {Geophysical Journal International},
+  Year                     = {2011},
+
+  Month                    = {Dec},
+  Number                   = {2},
+  Pages                    = {645–679},
+  Volume                   = {188},
+
+  __markedentry            = {[naeem:6]},
+  Doi                      = {10.1111/j.1365-246x.2011.05287.x},
+  ISSN                     = {0956-540X},
+  Owner                    = {naeem},
+  Publisher                = {Oxford University Press (OUP)},
+  Timestamp                = {2016.10.03},
+  Url                      = {http://dx.doi.org/10.1111/j.1365-246X.2011.05287.x}
+}
+
 @Article{Stocklin1968,
   Title                    = {Structural history and tectonics of {I}ran: {A} review},
   Author                   = {Stocklin, Jovan},
@@ -1040,6 +1108,26 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.07.15}
+}
+
+@Article{Werner2011,
+  Title                    = {High-Resolution Long-Term and Short-Term Earthquake Forecasts for California},
+  Author                   = {Werner, M. J. and Helmstetter, A. and Jackson, D. D. and Kagan, Y. Y.},
+  Journal                  = {Bulletin of the Seismological Society of America},
+  Year                     = {2011},
+
+  Month                    = {Aug},
+  Number                   = {4},
+  Pages                    = {1630–1648},
+  Volume                   = {101},
+
+  __markedentry            = {[naeem:]},
+  Doi                      = {10.1785/0120090340},
+  ISSN                     = {0037-1106},
+  Owner                    = {naeem},
+  Publisher                = {Seismological Society of America (SSA)},
+  Timestamp                = {2016.10.03},
+  Url                      = {http://dx.doi.org/10.1785/0120090340}
 }
 
 @Book{wesson1999,
@@ -1121,48 +1209,5 @@
   Publisher                = {Springer}
 }
 
-@Article{Kagan1994,
-  author    = {Y. Y. Kagan and D. D. Jackson},
-  title     = {Long-term probabilistic forecasting of earthquakes},
-  year      = {1994},
-  volume    = {99},
-  number    = {B7},
-  month     = {jul},
-  pages     = {13685--13700},
-  doi       = {10.1029/94jb00500},
-  url       = {http://dx.doi.org/10.1029/94JB00500},
-  journal   = {J. Geophys. Res.},
-  publisher = {Wiley-Blackwell},
-}
+@comment{jabref-meta: databaseType:biblatex;}
 
-@Article{Moschetti2015,
-  author        = {Morgan P. Moschetti},
-  title         = {A Long-Term Earthquake Rate Model for the Central and Eastern {United States} from Smoothed Seismicity},
-  year          = {2015},
-  volume        = {105},
-  number        = {6},
-  month         = {nov},
-  pages         = {2928--2941},
-  doi           = {10.1785/0120140370},
-  url           = {http://dx.doi.org/10.1785/0120140370},
-  __markedentry = {[naeem:]},
-  journal       = {Bulletin of the Seismological Society of America},
-  publisher     = {Seismological Society of America ({SSA})},
-}
-
-@Article{Petersen2015,
-  author        = {Mark D. Petersen and Morgan P. Moschetti and Peter M. Powers and Charles S. Mueller and Kathleen M. Haller and Arthur D. Frankel and Yuehua Zeng and Sanaz Rezaeian and Stephen C. Harmsen and Oliver S. Boyd and Ned Field and Rui Chen and Kenneth S. Rukstales and Nico Luco and Russell L. Wheeler and Robert A. Williams and Anna H. Olsen},
-  title         = {The 2014 {United States} National Seismic Hazard Model},
-  year          = {2015},
-  volume        = {31},
-  number        = {S1},
-  month         = {nov},
-  pages         = {S1--S30},
-  doi           = {10.1193/120814eqs210m},
-  url           = {http://dx.doi.org/10.1193/120814EQS210M},
-  __markedentry = {[naeem:6]},
-  journal       = {Earthquake Spectra},
-  publisher     = {Earthquake Engineering Research Institute},
-}
-
-@Comment{jabref-meta: databaseType:biblatex;}
