--- a/response.tex
+++ b/response.tex
@@ -58,7 +58,7 @@ Pp 6, line 168: It would be good to add a reference for the GEM effort.
 }
 
 \response{%
-Response will be here.
+Ricardo, I couldn't find any paper or report as a reference in their website. Please see. 
 }
 
 \comment{5}{%
