rename to new figures 12 and 13

--- a/results.tex
+++ b/results.tex
@@ -14,7 +14,7 @@
 
 \begin{figure*}[t]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-10.pdf}
+    \includegraphics[width=\textwidth]{figures/pdf/figure-12.pdf}
     \caption{Expected PGA values throughout the region of interest for 2 (left) and 10 (right) percent probability of exceeding an earthquake magnitude $M_w$ 5 using the combined model (R,U) hazard calculations. Mean expected values are shown in the middle, whereas the top and bottom frames correspond to the results obtained using plus and minus one standard deviation.}
     \label{fig:pga.ru.std}
 \end{figure*}
@@ -39,9 +39,9 @@ With this in mind, we make the following additional consideration. No one model 
 
 As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
-\begin{figure*}[th!]
+\begin{figure*}[h!]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-11}
+    \includegraphics[width=\textwidth]{figures/pdf/figure-13}
     \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). \myrevision{Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}}
     \label{fig:hazardcurve}
 \end{figure*}
@@ -64,9 +64,10 @@ Following the comparisons shown in Table \ref{tab:pga}, we looked into the more 
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=0.48\textwidth]{figures/pdf/figure-14} 
+    \includegraphics[width=0.48\textwidth]{figures/pdf/figure-14}
     \caption{Hazard curve comparison between the models considered in this study and the results of two previous studies by \citet{Ghodrati2003} and \citet{Boostan2015} for the city of Tehran. Here, the two previous studies just mentioned are identified with the codes Gh03 and Bo15, respectively. Also the PGA ranges of the \ref{tab:pga} are represented. The shaded area represents the upper and lower value of uncertainty at the GMPEs.}
     \label{fig:tehran}
 \end{figure}
-\myrevision{
+
+\myrevision{%
 Last, we put additional attention on the results for the capital city of Tehran. We compare hazard curves obtained in this study against those computed by \citet{Ghodrati2003} and \citet{Boostan2015} as well as ranges from other studies for 2 and 10\% probability of exceedance in 50 years. Our results are similar to those obtained by \citet{Boostan2015} in the range between 0.1 and 0.3 g (corresponding to annual probabilities of exceedance between $10^{-3}$ and $10^{-1}$), and then it is in the mean range of the mentioned studies.  Conversely, the trend in the hazard curve from \citet{Boostan2015} suggest the city is to expect significantly higher levels of ground motion at higher probability rates, which is contrary to our findings and those of \citet{Ghodrati2003}. Expected PGA range of other studies mentioned at the \ref{tab:pga}, represents, on average, our study presents trustable results. The shaded area, represents the upper and lower value of uncertainty at the GMPEs. In other word the upper part edge is calculated by just considering GMPEs+Unc  and the lower edge is calculated by just considering GMPEs-Unc. It perfectly represents that almost all studies are in the range of uncertainty of the GMPEs, and using one appropriate backbone GMPE as well as the uncertainties could have better role in considering the epistemic uncertainty than using multiple GMPEs as \citet{Atkinson2014} concluded.}
