rename to new figures 10 and 11

--- a/results.tex
+++ b/results.tex
@@ -21,6 +21,13 @@
 
 \input{table-pga}
 
+\begin{figure*}%[h!]
+    \centering
+    \includegraphics[width=\textwidth]{figures/pdf/figure-13}
+    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). \myrevision{Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}}
+    \label{fig:hazardcurve}
+\end{figure*}
+
 \section{Results and Analysis}
 
 Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes \myrevision{$M_w \geq 4.5$}. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as the R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
@@ -39,14 +46,7 @@ With this in mind, we make the following additional consideration. No one model 
 
 As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the North Alborz fault in the Alborz region and that of the different faults in the Kopeh Dagh region. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2 model results, where the expected accelerations are of the order of 1.0 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
-\begin{figure*}[h!]
-    \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-13}
-    \caption{Hazard curves representing the annual probability of exceedance as function of peak ground acceleration for six cities in northern Iran based on the two basic models considered in this study, R and U, and the combined model (R,U). \myrevision{Dashed lines represent the 0.0021 and 0.000404 annual probability of exceedance corresponding to probability of exceedance of 10 and 2 percent in 50 years.}}
-    \label{fig:hazardcurve}
-\end{figure*}
-
-\myrevision{
+\myrevision{%
 We also note that the overall distribution of mean PGA pattern agrees with the recent study by \citet{Khodaverdian_2016_BSSA}. However, in general, their results are slightly lower than this study. They provided a rough estimate of the PGA, and the seismicity parameters, like completeness magnitude, the catalog, $M_{max}$, and $b-value$ are different in these two studies.  Consequently, we don't expect to match the results. For example  in case of $b-value$, in the same study region, \citet{Khodaverdian_2016_BSSA} reported very high variation of $b-value$ (0.56 - 1.27).  56\% of grid points have $b-value > 1$ and 53 \% of them are greater than 1.1.  Where in this study the $b-value$ has a narrow range of variation (0.93-1.15).  These estimates also agree, on average, with other studies. For the Azerbaijan tectonic seismic region for the city of Uremia, we found 0.24 g which is slightly lower than \citet{BHRC2014} and \citet{Zare2012} and higher than \citet{Khodaverdian_2016_BSSA} for 10 \% probability of exceedance in 50 years. For a 2\% probability of exceedance in 50 years, \citet{Golara2014} expected acceleration on the order of 0.3 - 0.5 g, where or mean value is 0.38 g. For the city of Tabriz, the results match with \citet{BHRC2014} and are in the range of \citet{Zare2012} for 10 \% probability of exceedance in 50 years.  \citet{Vafaie2011} expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% probability of exceedance in 50 years, respectively, where our mean values are about 0.61 and 0.35 g for the same corresponding probabilities. For the city of Ardabil, we found 0.73 g and 0.43 g for 2 and 10\% probability of exceedance in 50 years.  Our results are slightly higher than \citet{BHRC2014}, however, for 10\% probability of exceedance in 50 years, the results are in the range reported by \citet{Zare2012}. For 2\% probability of exceedance in 50 years, our results are very close to \citet{Golara2014} and \citet{Khodaverdian_2016_BSSA}. In the Alborz tectonic seismic region for the city of Rasht, our results are in a well agreement with the recent study of \citet{Abdollahzadeh2014}. For the city of Tehran, the results are in agreement with \citet{Abdi2013}, and slightly lower than  \citet{BHRC2014}, \citet{Za2012}, and \citet{Golara2014} for 10\% probability of exceedance in 50 years. For 2\% 10\% probability of exceedance in 50 years, our results are lower than \citet{Golara2014} and higher than \citet{Khodaverdian2015}. For the Kopeh Dagh tectonic seismic region for the city of Mashhad, results are lower than \citet{BHRC2014} and higher than \citet{Khodaverdian_2016_BSSA}.}
 
 
