--- a/references.bib
+++ b/references.bib
@@ -874,16 +874,15 @@
 }
 
 @Article{Nemati2015,
-  Title                    = {Intermediate-term variations in 200 years seismicity of {S}outh of {I}ran},
+  Title                    = {Intermediate-term variations in 200 years seismicity of south of {I}ran},
   Author                   = {Nemati, Majid},
   Journal                  = {Geomatics, Natural Hazards and Risk},
   Year                     = {2015},
-  Number                   = {ahead-of-print},
-  Pages                    = {1--16},
-
-  Owner                    = {naeem},
-  Publisher                = {Taylor \& Francis},
-  Timestamp                = {2015.07.15}
+  Number                   = {3},
+  Pages                    = {1065--1080},
+  Volume                   = {7},
+  Doi                      = {10.1080/19475705.2015.1030785},
+  Publisher                = {Taylor \& Francis}
 }
 
 @Article{Nowroozi1976,
@@ -1210,4 +1209,3 @@
 }
 
 @comment{jabref-meta: databaseType:biblatex;}
-
