two comments added to the response file.

--- a/response.tex
+++ b/response.tex
@@ -34,7 +34,7 @@ Pp3, Line 71: A short, summary description of previous source models would highl
 }
 
 \response{%
-Response will be here.
+In Khodaverdian et al (2016), seismicity parameters like $b-value$ and $M_{max}$ are calculated for sites equally distributed all over the Iran on a grid 1*1 degree. Earthquake catalog for each grid point is all events within 200 km buffer zone surrounding the grid point. Whereas in this study, we assume the seismic parameters are uniform for each tectonic seismic region. 
 }
 
 \comment{2}{%
@@ -74,7 +74,7 @@ Pp7-8: The authors should note that some authors use an alternative smoothing ke
 }
 
 \response{%
-Added. Thanks.
+Added. Thanks. (No need to add more explanation. Please see the email.)
 }
 
 
